# multiseat-rs

./: Cargo.toml  README.md
patches/gdm/: 291.patch
patches/gnome-shell/: 2230.patch
src/: app.rs  main.rs
src/app/: icons.rs  mod.rs
src/app/components/: about_dialog.rs  content.rs  delete.rs  device_card.rs  input_identify.rs  list_item.rs  mod.rs  seat_dialog.rs  sidebar.rs
src/app/config/: info.rs
src/app/lib/: mod.rs  udev_manager.rs
src/app/services/: input.rs  logind.rs  mod.rs  udev.rs
src/app/utils/: mod.rs
src/assets/: style.css
